Fix T77300: Some scientific notation evaluation has incorrect results

Ref D7922